--- a/vue-src/index.html
+++ b/vue-src/index.html
@@ -4,7 +4,7 @@
  * @Author: wyx
  * @Date: 2020-12-08 10:18:25
  * @LastEditors: wyx
- * @LastEditTime: 2020-12-08 19:20:04
+ * @LastEditTime: 2020-12-09 20:01:06
 -->
 <!DOCTYPE html>
 <html>
@@ -12,7 +12,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <!-- 增加 -->
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self' data: gap: https://ssl.gstatic.com 'unsafe-eval'; style-src 'self' 'unsafe-inline'; media-src *; img-src 'self' data: content:;">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self' data: gap: https://ssl.gstatic.com 'unsafe-eval'; style-src 'self' 'unsafe-inline'; media-src *; img-src * data: ; connect-src *;">
+    <meta name="referrer" content="no-referrer">
     <meta name="format-detection" content="telephone=no">
     <meta name="msapplication-tap-highlight" content="no">
     <meta name="viewport" content="initial-scale=1, width=device-width, viewport-fit=cover">
